Fixed greek prop names and ensured full visibility on 1024x768

--- a/css/theme/pw15.css
+++ b/css/theme/pw15.css
@@ -733,6 +733,6 @@ b.right::after {
 }
 
 .reveal section .translucent {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.6);
   text-shadow: 0 0 0.2em white;
 }
